Prepare Workcrest for hosted deployment
